# clipsy

./: CLAUDE.md  README.md  codecov.yml  init-project.sh  pyproject.toml
.claude/commands/: refactor.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
scripts/: bump.sh  install_launchagent.sh  restart.sh
src/clipsy/: __init__.py  __main__.py  app.py  config.py  models.py  monitor.py  redact.py  storage.py  utils.py
tests/: conftest.py  test_app.py  test_config.py  test_main.py  test_monitor.py  test_redact.py  test_storage.py  test_utils.py
